--- a/styles/styles.css
+++ b/styles/styles.css
@@ -92,6 +92,7 @@ aside{
     top: -49px;
     width: 400px;
     height: 90vh;
+    margin-right: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
